test: 주차별 가격 정보의 시작과 종료일에 대한 기준 관련 테스트